--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -17,7 +17,7 @@
     margin-right: 10px;
   }
   
-  .birthdayText {
+  /* .birthdayText {
     font-weight: 300;
     font-size: 15px;
   }
@@ -80,4 +80,4 @@
     height: 100px;
     object-fit: cover;
     border-radius: 5px;
-  }
+  } */
